--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "u-siem-paloalto"
-version = "0.0.4"
+version = "0.0.6"
 authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
 license = "MIT"
 description = "Library to be used to build a custom SIEM with the framework uSIEM"
@@ -14,6 +14,5 @@ name = "usiem_paloalto"
 path = "src/lib.rs"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-u-siem = {version = "^0.0.70"}
-chrono = "0.4"
+u-siem = {version = "0.0"}
+lazy_static = "1.4.0"
